--- a/templates/master_etc_named.conf.j2
+++ b/templates/master_etc_named.conf.j2
@@ -97,6 +97,9 @@ zone "{{ bind_zone.name }}" IN {
   type master;
   file "{{ bind_zone_dir }}/{{ bind_zone.name }}";
   notify yes;
+{% if bind_zone.allow_transfer is defined %}
+  allow-transfer { {{ bind_zone.allow_transfer|join('; ') }}; };
+{% endif %}
 {% if bind_zone.also_notify is defined %}
   also-notify  { {{ bind_zone.also_notify|join('; ') }}; };
 {% endif %}
